@@ -27,10 +27,10 @@ public class GameObjectParser implements Parser<GameObject> {
   private final ObjectMapper mapper = new ObjectMapper();
 
   private static final String TAG = "Tag";
-  private static final String BEHAVIORS = "BehaviorController";
+  private static final String BEHAVIOR_CONTROLLER = "BehaviorController";
+  private static final String BEHAVIORS = "Behaviors";
   private static final String NAME = "Name";
   private static final String COMPONENTS = "Components";
-  private static final String CONFIGURATIONS = "Configurations";
 
 
   /**
@@ -72,8 +72,8 @@ public class GameObjectParser implements Parser<GameObject> {
   }
 
   private void handleAddingBehaviors(JsonNode node, GameObject gameObject) throws ParsingException {
-    if (node.has(BEHAVIORS)) {
-      JsonNode behaviors = node.get(BEHAVIORS);
+    if (node.has(BEHAVIOR_CONTROLLER)) {
+      JsonNode behaviors = node.get(BEHAVIOR_CONTROLLER);
       parseBehaviors(gameObject, behaviors);
     }
   }
@@ -103,12 +103,14 @@ public class GameObjectParser implements Parser<GameObject> {
 
   private void parseBehaviors(GameObject gameObject, JsonNode behaviorsNode)
       throws ParsingException {
-    if (behaviorsNode.isArray()) {
+    JsonNode behaviorsArrayNode = behaviorsNode.get("Behaviors");
+    if (behaviorsArrayNode != null && behaviorsArrayNode.isArray()) {
       BehaviorController behaviorController = new BehaviorController();
-      for (JsonNode behaviorNode : behaviorsNode) {
+      for (JsonNode behaviorNode : behaviorsArrayNode) {
         Behavior behavior = behaviorParser.parse(behaviorNode);
         behaviorController.addBehavior(behavior);
       }
+      gameObject.addComponent(behaviorController);
     }
   }
 
@@ -143,7 +145,7 @@ public class GameObjectParser implements Parser<GameObject> {
     for (GameComponent component : data.getAllComponents().values()) {
       if (component.getClass().isAssignableFrom(BehaviorController.class)) {
         BehaviorController controller = (BehaviorController) component;
-        behaviors.addAll(((List<Behavior>) controller.getSerializedFields().get(0)));
+        behaviors.addAll(((List<Behavior>) controller.getSerializedFields().getFirst().getValue()));
       } else {
         components.add(component);
       }
@@ -167,6 +169,10 @@ public class GameObjectParser implements Parser<GameObject> {
       JsonNode behaviorNode = behaviorParser.write(behavior);
       behaviors.add(behaviorNode);
     }
-    root.set(BEHAVIORS, behaviors);
+
+    ObjectNode behaviorWrapper = mapper.createObjectNode();
+    behaviorWrapper.set(BEHAVIORS, behaviors);
+    root.set(BEHAVIOR_CONTROLLER, behaviorWrapper);
   }
+
 }
